Week-2/practice save
(base) dyn3187-238:~ freyasmith$ python
Python 2.7.10 (default, Feb 22 2019, 21:55:15) 
[GCC 4.2.1 Compatible Apple LLVM 10.0.1 (clang-1001.0.37.14)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> 3+8
11
>>> hiyah
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'hiyah' is not defined
>>> 'hiyah'
'hiyah'
>>> my_string = 'hello'
>>> my_string
'hello'
>>> import random
>>> import random as r
>>> random.randint()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: randint() takes exactly 3 arguments (1 given)
>>> import random
>>> python 3
  File "<stdin>", line 1
    python 3
           ^
SyntaxError: invalid syntax
>>> ^D
(base) dyn3187-238:~ freyasmith$ python
Python 2.7.10 (default, Feb 22 2019, 21:55:15) 
[GCC 4.2.1 Compatible Apple LLVM 10.0.1 (clang-1001.0.37.14)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> ^D
(base) dyn3187-238:~ freyasmith$ python3
Python 3.7.3 (default, Mar 27 2019, 16:54:48) 
[Clang 4.0.1 (tags/RELEASE_401/final)] :: Anaconda, Inc. on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> 
(base) dyn3187-238:~ freyasmith$ python
Python 2.7.10 (default, Feb 22 2019, 21:55:15) 
[GCC 4.2.1 Compatible Apple LLVM 10.0.1 (clang-1001.0.37.14)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> ^D
(base) dyn3187-238:~ freyasmith$ python3
Python 3.7.3 (default, Mar 27 2019, 16:54:48) 
[Clang 4.0.1 (tags/RELEASE_401/final)] :: Anaconda, Inc. on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> 9/3
3.0
>>> 9/3.
3.0
>>> 9//3
3
>>> 9//2
4
>>> 5.5.*3.2
  File "<stdin>", line 1
    5.5.*3.2
        ^
SyntaxError: invalid syntax
>>> a
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'a' is not defined
>>> print(b)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'b' is not defined
>>> hello = 'hello'
>>> world = 'world'
>>> hello = 'hello '
>>> sentence = hello + world
>>> sentence
'hello world'
>>> long_string = '''
... ghrhgrjjvgrjdvjejsksosxiuctdsgdnemdk
... '''
>>> long_string
'\nghrhgrjjvgrjdvjejsksosxiuctdsgdnemdk\n'
>>> 4>6
False
>>> 5==5
True
>>> 10<=20
True
>>> import math
>>> print (math.e)
2.718281828459045
>>> math.pi
3.141592653589793
>>> radius = 5
>>> math.pi * radius**
  File "<stdin>", line 1
    math.pi * radius**
                     ^
SyntaxError: invalid syntax
>>> math.pi * radius**2
78.53981633974483
>>> math.sin
<built-in function sin>
>>> x = 3
>>> sin(x) + 2
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'sin' is not defined
>>> math.sin(x) + 2
2.1411200080598674
>>> clear
clear
creditscd
cdd